--- a/index.html
+++ b/index.html
@@ -329,5 +329,49 @@
       </div>
       <button class="btn btn--show-modal">Open your free account today!</button>
     </section>
+
+    <!-- Footer Section -->
+
+    <footer class="footer">
+      <ul class="footer__nav">
+        <li class="footer__item">
+          <a class="footer__link" href="#">About</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Pricing</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Terms of Use</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Privacy Policy</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Careers</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Blog</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Contact Us</a>
+        </li>
+      </ul>
+      <img src="dist/images/icon.png" alt="Logo" class="footer__logo" />
+      <p class="footer__copyright">
+        &copy; Coded by
+        <a
+          class="footer__link twitter-link"
+          target="_blank"
+          href="https://twitter.com/A_Zagri"
+          >Ahmed Al-zeqri</a
+        >. inspired by
+        <a
+          class="footer__link twitter-link"
+          target="_blank"
+          href="https://twitter.com/Jonasschmedtman"
+          >Jonas Schmedtmann</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
