toggle modal window

--- a/index.html
+++ b/index.html
@@ -393,5 +393,9 @@
       </form>
     </div>
     <div class="overlay hidden"></div>
+
+    <!-- Javascript -->
+
+    <script src="dist/js/script.js"></script>
   </body>
 </html>
