--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
+    <!-- Link Swiper's CSS -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="dist/css/style.css" />
     <title>Banksit | When Banking meets Minimalist</title>
@@ -240,81 +245,81 @@
       </div>
 
       <div class="slider">
-        <div class="slide">
-          <div class="testimonial">
-            <h5 class="testimonial__header">Best financial decision ever!</h5>
-            <blockquote class="testimonial__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Accusantium quas quisquam non? Quas voluptate nulla minima
-              deleniti optio ullam nesciunt, numquam corporis et asperiores
-              laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
-              id alias reiciendis, perferendis facere pariatur dolore veniam
-              autem esse non voluptatem saepe provident nihil molestiae.
-            </blockquote>
-            <address class="testimonial__author">
-              <img
-                src="dist/images/user-1.jpg"
-                alt=""
-                class="testimonial__author--photo"
-              />
-              <h6 class="testimonial__author--name">Aarav Lynn</h6>
-              <p class="testimonial__author--location">San Francisco, USA</p>
-            </address>
+        <div class="swiper-wrapper">
+          <div class="slide swiper-slide">
+            <div class="testimonial">
+              <h5 class="testimonial__header">Best financial decision ever!</h5>
+              <blockquote class="testimonial__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Accusantium quas quisquam non? Quas voluptate nulla minima
+                deleniti optio ullam nesciunt, numquam corporis et asperiores
+                laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
+                id alias reiciendis, perferendis facere pariatur dolore veniam
+                autem esse non voluptatem saepe provident nihil molestiae.
+              </blockquote>
+              <address class="testimonial__author">
+                <img
+                  src="dist/images/user-1.jpg"
+                  alt=""
+                  class="testimonial__author--photo"
+                />
+                <h6 class="testimonial__author--name">Aarav Lynn</h6>
+                <p class="testimonial__author--location">San Francisco, USA</p>
+              </address>
+            </div>
+          </div>
+          <div class="slide swiper-slide">
+            <div class="testimonial">
+              <h5 class="testimonial__header">
+                The last step to becoming a complete minimalist
+              </h5>
+              <blockquote class="testimonial__text">
+                Quisquam itaque deserunt ullam, quia ea repellendus provident,
+                ducimus neque ipsam modi voluptatibus doloremque, corrupti
+                laborum. Incidunt numquam perferendis veritatis neque
+                repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
+                elit. Illo deserunt exercitationem deleniti.
+              </blockquote>
+              <address class="testimonial__author">
+                <img
+                  src="dist/images/user-2.jpg"
+                  alt=""
+                  class="testimonial__author--photo"
+                />
+                <h6 class="testimonial__author--name">Miyah Miles</h6>
+                <p class="testimonial__author--location">London, UK</p>
+              </address>
+            </div>
+          </div>
+          <div class="slide swiper-slide">
+            <div class="testimonial">
+              <h5 class="testimonial__header">
+                Finally free from old-school banks
+              </h5>
+              <blockquote class="testimonial__text">
+                Debitis, nihil sit minus suscipit magni aperiam vel tenetur
+                incidunt commodi architecto numquam omnis nulla autem,
+                necessitatibus blanditiis modi similique quidem. Odio aliquam
+                culpa dicta beatae quod maiores ipsa minus consequatur error
+                sunt, deleniti saepe aliquid quos inventore sequi.
+                Necessitatibus id alias reiciendis, perferendis facere.
+              </blockquote>
+              <address class="testimonial__author">
+                <img
+                  src="dist/images/user-3.jpg"
+                  alt=""
+                  class="testimonial__author--photo"
+                />
+                <h6 class="testimonial__author--name">Francisco Gomes</h6>
+                <p class="testimonial__author--location">Lisbon, Portugal</p>
+              </address>
+            </div>
           </div>
         </div>
 
-        <div class="slide">
-          <div class="testimonial">
-            <h5 class="testimonial__header">
-              The last step to becoming a complete minimalist
-            </h5>
-            <blockquote class="testimonial__text">
-              Quisquam itaque deserunt ullam, quia ea repellendus provident,
-              ducimus neque ipsam modi voluptatibus doloremque, corrupti
-              laborum. Incidunt numquam perferendis veritatis neque repellendus.
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-              deserunt exercitationem deleniti.
-            </blockquote>
-            <address class="testimonial__author">
-              <img
-                src="dist/images/user-2.jpg"
-                alt=""
-                class="testimonial__author--photo"
-              />
-              <h6 class="testimonial__author--name">Miyah Miles</h6>
-              <p class="testimonial__author--location">London, UK</p>
-            </address>
-          </div>
-        </div>
-
-        <div class="slide">
-          <div class="testimonial">
-            <h5 class="testimonial__header">
-              Finally free from old-school banks
-            </h5>
-            <blockquote class="testimonial__text">
-              Debitis, nihil sit minus suscipit magni aperiam vel tenetur
-              incidunt commodi architecto numquam omnis nulla autem,
-              necessitatibus blanditiis modi similique quidem. Odio aliquam
-              culpa dicta beatae quod maiores ipsa minus consequatur error sunt,
-              deleniti saepe aliquid quos inventore sequi. Necessitatibus id
-              alias reiciendis, perferendis facere.
-            </blockquote>
-            <address class="testimonial__author">
-              <img
-                src="dist/images/user-3.jpg"
-                alt=""
-                class="testimonial__author--photo"
-              />
-              <h6 class="testimonial__author--name">Francisco Gomes</h6>
-              <p class="testimonial__author--location">Lisbon, Portugal</p>
-            </address>
-          </div>
-        </div>
-
-        <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
-        <div class="dots"></div>
+        <button class="slider__btn slider__btn--left">&larr;</button>
+        <div class="swiper-pagination dots"></div>
       </div>
     </section>
 
@@ -395,7 +400,11 @@
     <div class="overlay hidden"></div>
 
     <!-- Javascript -->
-
-    <script src="dist/js/script.js"></script>
+    <!-- GSAP.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+    <!-- Swaiper.js -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- custom -->
+    <!-- <script src="dist/js/script.js"></script> -->
   </body>
 </html>
