--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           data-version-number="3.0"
         />
 
+        <span class="nav__button"> </span>
+
         <ul class="nav__links">
           <li class="nav__item">
             <a href="#section--1" class="nav__link">Features</a>
@@ -402,6 +404,8 @@
     <!-- Javascript -->
     <!-- GSAP.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+    <!-- ScrollTrigger -->
+    <script src="https://assets.codepen.io/16327/ScrollTrigger.min.js"></script>
     <!-- Swaiper.js -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- custom -->
