--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           data-version-number="3.0"
         />
 
-        <span class="nav__button"> </span>
+        <div class="nav__button">
+          <span class="nav__button--line"> </span>
+        </div>
 
         <ul class="nav__links">
           <li class="nav__item">
